--- a/forms.html
+++ b/forms.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cssForEx3.css"></head>
+    <link rel="stylesheet" href="cssForEx3.css">
+</head>
 <body>
     <p class="green-text">This is a green welcome text</p>
     <h1>Sign up</h1>
