--- a/CVgrid.html
+++ b/CVgrid.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matan's CV</title>
+    <script src="CVgrid.js"></script>
     <link rel="stylesheet" href="CVgrid.css">
 </head>
 <body>
+    <div class="button">
+        <button id="clickme" onclick="changeImage();">Click to change image!</button>
+    </div>
+    
+    <div class="pic">
+        <img src="Logo.jpeg" class="Pics" id="Logo" width="300" height="300">
+    </div>
+
     <div class="header">
         Matan Spiro
     </div>
@@ -23,5 +32,7 @@
     <div class="bottom">
         Languages
     </div>
+
+
 </body>
 </html>
